health-check added

--- a/UnitOfWorkDemo/appsettings.json
+++ b/UnitOfWorkDemo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=UnitOfWorkDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost,1433;Database=UnitOfWorkDb;User ID=sa;Password=Mypassword123!;Encrypt=False;Connect Timeout=15;"
   }
 }
